# autocut

./: .gitignore  README.md  audit.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml  deploy-site.yml
site/: README.md  index.html  styles.css
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  binaries.rs  commands.rs  cutlist.rs  export_fcpxml.rs  export_mp4.rs  lib.rs  main.rs  probe.rs  timecode.rs  vad.rs  waveform.rs
src/components/: Dropzone.svelte  ExportPanel.svelte  ManualCutPanel.svelte  ParameterPanel.svelte  ResizableSplit.svelte  Slider.svelte  Timeline.svelte  VideoPlayer.svelte
src/lib/: api.ts  store.svelte.ts  types.ts
src/styles/: globals.css
